# my_ur

./: CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  kinematics.yaml  ur_controllers.yaml
launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
scripts/: mimic_joint_state_publisher.py
urdf/: gripper.urdf.xacro  object.xacro  simple_sander.urdf.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  wall.xacro
worlds/: demo.world
